# aws-iot-device-sdk-embedded-C

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  MISRA.md  README.md  docker-compose.yml
.github/workflows/: docker-image.yml
demos/mqtt/mqtt_demo_mutual_auth/: CMakeLists.txt  demo_config.h  mqtt_demo_mutual_auth.c
docker/: mbedtls-mutual-auth.dockerfile
docker/runner/: go.mod  go.sum  main.go
libraries/: CMakeLists.txt
libraries/standard/mqtt/: CMakeLists.txt
platform/posix/: posixFilePaths.cmake
platform/posix/transport/: CMakeLists.txt
platform/posix/transport/include/: mbedtls_posix.h
platform/posix/transport/src/: mbedtls_posix.c
tools/ci/: mosquitto.conf
tools/cmake/: install.cmake
